--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-i18next": "^13.1.2",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
+    "react-swipeable-views": "npm:@gromy/react-swipeable-views@^0.15.1",
     "reflect-metadata": "^0.1.13",
     "styled-components": "^6.0.7",
     "tss-react": "^4.9.0"
@@ -44,6 +45,7 @@
     "@types/node": "^20.5.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-swipeable-views": "^0.13.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
